<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hc_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText android:id="@+id/free_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_some_text"
                android:background="@android:color/transparent"
                android:textColorHint="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:singleLine="true"
                android:imeActionLabel="@string/go"/>

            <ImageView android:id="@+id/transform_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/hipchat_button"
                app:holdr_onClick="true"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout android:id="@+id/results_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">




    </FrameLayout>

    <com.kmiller.hipchatchallenge.views.HipchatTextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/instructions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center_horizontal"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hipchat_logo"
            android:layout_gravity="center"/>

        <com.kmiller.hipchatchallenge.views.HipchatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hc_blue"
            android:textSize="20sp"
            android:text="@string/by_kyle_miller"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>
