<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hc_blue">

        <com.kmiller.hipchatchallenge.views.HipchatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/by_kyle_miller"/>

    </android.support.v7.widget.Toolbar>

    <ImageView android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/hipchat_logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView android:id="@+id/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/hc_blue"
                android:text="@string/bring_to_life"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <View android:id="@+id/reveal_view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="#ffffff" />

        </FrameLayout>

        <Button android:id="@+id/view_demo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_demo"
            android:background="@drawable/btn_view_demo_bg_selector"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:alpha="0"
            app:holdr_onClick="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:clipChildren="false">

        <com.kmiller.hipchatchallenge.views.PersonView
            android:id="@+id/person1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/person1"
            android:clipChildren="false"/>

        <com.kmiller.hipchatchallenge.views.PersonView
            android:id="@+id/person2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:person_drawable="@drawable/person2"
            android:clipChildren="false"/>

        <com.kmiller.hipchatchallenge.views.PersonView
            android:id="@+id/person3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:person_drawable="@drawable/person3"
            android:clipChildren="false"/>

        <com.kmiller.hipchatchallenge.views.PersonView
            android:id="@+id/person4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:person_drawable="@drawable/person4"
            android:clipChildren="false"/>

        <com.kmiller.hipchatchallenge.views.PersonView
            android:id="@+id/person5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:person_drawable="@drawable/person5"
            android:clipChildren="false"/>

        <com.kmiller.hipchatchallenge.views.PersonView
            android:id="@+id/person6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:person_drawable="@drawable/person6"
            android:clipChildren="false"/>


    </LinearLayout>

</FrameLayout>